Removed thymeleaf, and added cross origin access for some of api action.
Updated API paths, and openapi specification.
